--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,8 @@
   </head>
 
   <body>
-    <div class="container text-center">
-      <div class="row justify-content-center align-items-center">
-        <%= yield %>
-      </div>
-    </div>
-    
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          Bootstrap
-        </a>
-      </div>
-    </nav>
-
+    <%= render 'shared/header'%>
+    <%#= yield %>
+    <%= render 'shared/footer'%>
   </body>
 </html>
