--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render 'shared/header'%>
-    <%#= yield %>
+    <%= yield %>
     <%= render 'shared/footer'%>
   </body>
 </html>
